--- a/configs/autoencoder/x_autoencoder_kl.yaml
+++ b/configs/autoencoder/x_autoencoder_kl.yaml
@@ -10,13 +10,14 @@ model:
         disc_start: 50001
         kl_weight: 0.000001
         disc_weight: 0.5
+        disc_in_channels: 1
 
     ddconfig:
       double_z: True
       z_channels: 3
       resolution: 128 
       in_channels: 1
-      out_ch: 3
+      out_ch: 1
       ch: 128
       ch_mult: [ 1,2,4 ]  # num_down = len(ch_mult)-1
       num_res_blocks: 2
@@ -35,3 +36,4 @@ lightning:
   trainer:
     benchmark: True
     accumulate_grad_batches: 2
+    max_epochs: 100 
